5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1573_1559.log
== TEST (2019-03-13 14:16:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia." .upper())
-- EXECUTION TIME:
0.167634
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
